Table logentry {
  id integer
  action_time timestamp
  user_id integer [note: 'foreign key to customuser']
  content_type_id integer [note: 'foreign key to contenttype']
  object_id text
  object_repr varchar
  action_flag integer
  change_message text
}

Table permission {
  id integer
  name varchar
  content_type_id integer [note: 'foreign key to contenttype']
  codename varchar
}

Table group {
  id integer
  name varchar
}

Table contenttype {
  id integer
  app_label varchar
  model varchar
}

Table session {
  session_key varchar
  session_data text
  expire_date timestamp
}

Table chatroom {
  id integer
  car_id integer [note: 'foreign key to car']
  created_at timestamp
  last_message_at timestamp
}

Table message {
  id integer
  chat_room_id integer [note: 'foreign key to chatroom']
  sender_id integer [note: 'foreign key to customuser']
  content text
  timestamp timestamp
}

Table cartype {
  id integer
  name varchar
}

Table car {
  id integer
  name varchar
  description text
  horsepower integer
  car_type_id integer [note: 'foreign key to cartype']
  status varchar
  owner_id integer [note: 'foreign key to customuser']
  created_at timestamp
  time_per_rai integer
}

Table schedule {
  id integer
  car_id integer [note: 'foreign key to car']
  time varchar
  booked_by_id integer [note: 'foreign key to customuser']
}

Table customuser {
  id integer
  password varchar
  last_login timestamp
  username varchar
  first_name varchar
  last_name varchar
  email varchar
  date_joined timestamp
  nickname varchar
  age integer
  phone_number varchar
  address text
}

Table notification {
  id integer
  user_id integer [note: 'foreign key to customuser']
  borrower_id integer [note: 'foreign key to customuser']
  message text
  timestamp timestamp
  schedule_id integer [note: 'foreign key to schedule']
}

Table carreview {
  id integer
  car_id integer [note: 'foreign key to car']
  user_id integer [note: 'foreign key to customuser']
  rating integer
  review_text text
  created_at timestamp
}

Ref: logentry.user_id > customuser.id // many-to-one
Ref: logentry.content_type_id > contenttype.id // many-to-one
Ref: permission.content_type_id > contenttype.id // many-to-one
Ref: chatroom.car_id > car.id // many-to-one
Ref: message.chat_room_id > chatroom.id // many-to-one
Ref: message.sender_id > customuser.id // many-to-one
Ref: car.car_type_id > cartype.id // many-to-one
Ref: car.owner_id > customuser.id // many-to-one
Ref: schedule.car_id > car.id // many-to-one
Ref: schedule.booked_by_id > customuser.id // many-to-one
Ref: notification.user_id > customuser.id // many-to-one
Ref: notification.borrower_id > customuser.id // many-to-one
Ref: notification.schedule_id > schedule.id // many-to-one
Ref: carreview.car_id > car.id // many-to-one
Ref: carreview.user_id > customuser.id // many-to-one
